--- a/debug.html
+++ b/debug.html
@@ -9,9 +9,9 @@
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 		<!-- Less.js (uncomment for client-side rendering of less stylesheets; leave commented to use only CSS) -->
-		<script src="enyo/tools/less.js"></script>
+		<script src="lib/enyo/tools/less.js"></script>
 		<!-- enyo (debug) -->
-		<script src="enyo/enyo.js"></script>
+		<script src="lib/enyo/enyo.js"></script>
 		<!-- application (debug) -->
 		<script src="source/package.js" type="text/javascript"></script>
 	</head>
