--- a/debug.html
+++ b/debug.html
@@ -9,11 +9,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 		<!-- Less.js (uncomment for client-side rendering of less stylesheets; leave commented to use only CSS) -->
-		<!-- <script src="enyo/tools/less.js"></script> -->
-		<!-- Resolution-independent version of LESS that parses and converts both LESS and CSS. Uncomment for client-side
-		rendering of resolution-independent stylesheets; leave commented for standard LESS (make sure the above less.js
-		script is uncommented). -->
-		<script src="enyo/tools/less-ri.js"></script>
+		<script src="enyo/tools/less.js"></script>
 		<!-- enyo (debug) -->
 		<script src="enyo/enyo.js"></script>
 		<!-- application (debug) -->
